--- a/public/assets/scss/customs/partials/_pages.scss
+++ b/public/assets/scss/customs/partials/_pages.scss
@@ -270,7 +270,7 @@
     padding: 0 5px;
     margin: 0 10px;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     -webkit-overflow-scrolling: touch;
 
     li {
@@ -291,6 +291,7 @@
       height: 30px;
       line-height: 30px;
       text-align: center;
+      padding: 0 10px;
     }
     &::-webkit-scrollbar {
       display: none;
